--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,3 @@
-theme: slate
-
+remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme
-
-title: My personal website
-description: A site to show you who I am
-theme: slate
